--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@faker-js/faker": "^6.2.0",
+    "bootstrap": "^5.1.3",
     "exec-sh": "^0.4.0",
+    "faker": "^6.6.6",
+    "faker-js": "^1.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
